# steam-proton-browser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml
docs/design/: 01-project-overview.md  02-architecture.md  03-ux-navigation.md  04-steam-folder-reference.md  05-development-toolchain.md
src/: cache.rs  main.rs
src/config/: persistence.rs  settings.rs
src/platform/: explorer.rs  mod.rs  paths.rs
src/steam/: acf.rs  discovery.rs  folders.rs  library.rs  mod.rs
src/tui/: app.rs  keybindings.rs  mod.rs  theme.rs  views.rs  widgets.rs
